@@ -1,6 +1,10 @@
 2.0.4
 ----------------
 
+- fix issue139: adapt to a recent change in pypi which now serves
+  under URLs using normalized project names instead of the "real" registered name
+  Thanks Timothy Allen and others for sorting this out.
+  
 - fix issue129: fix __init__ provided version and add a test that it always matches
   the one which pkg_resources sees (which gets it effectively from setup.py)
 
